# retrofetch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: logos.rs  probe.rs  screenshot.rs
filer/: Cargo.toml
filer/src/: main.rs
notepad/: Cargo.toml
notepad/src/: main.rs
picker/: Cargo.toml
picker/src/: main.rs
retrogui/: Cargo.toml  README.md
retrogui/src/: app.rs  event.rs  font.rs  geometry.rs  lib.rs  mock.rs  painter.rs  theme.rs  wayland.rs  widget.rs
retrogui/src/widgets/: bevel.rs  button.rs  checkbox.rs  column.rs  container.rs  dialog.rs  image.rs  label.rs  list.rs  menu.rs  mod.rs  row.rs  scrollbar.rs  text_editor.rs  text_input.rs
retrogui/tests/: snapshots.rs
retrogui/tests/common/: mod.rs
retrogui/tests/snapshots/: dialog_warning_1_25.snap  text_editor_focused_1_50.snap
src/: disk.rs  host.rs  lib.rs  main.rs  ui.rs
