[package]
name = "retrofetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A retro 'About This Computer' system info screen for your desktop"
authors = ["Robert Lillack <rob@lillack.net>"]
repository = "https://github.com/roblillack/retrofetch"
homepage = "https://github.com/roblillack/retrofetch"
license = "MIT"
readme = "README.md"
keywords = ["neofetch", "system-info", "fetch", "retro", "gui"]
categories = ["gui", "hardware-support"]

# Whitelist what ships in the published crate. The OS logos are baked into the
# binary at compile time by `include_svg!`, so they must be in the package; the
# DejaVu fonts under tests/, the examples, the README screenshot and the
# editor/CI directories are only needed in-repo and stay out.
include = [
    "src/**/*.rs",
    "assets/os/*.svg",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
saudade = "0.3"
sysinfo = "0.38"
regex = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
