[package]
name = "retrogui"
version = "0.1.0"
edition = "2024"

[dependencies]
# winit drives X11 only. We bypass it entirely on Wayland sessions and
# talk to the compositor through smithay-client-toolkit, which gives us
# real xdg_popup and proper window placement. Disabling winit's Wayland
# features drops `wayland-csd-adwaita` and `wayland-dlopen` from the
# tree as a side benefit. The `x11` feature is a harmless no-op off
# free-unix (winit's X11 platform crates are themselves target-gated).
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11"] }
softbuffer = "0.4"
fontdue = "0.8"
fontdb = "0.16"
png = "0.17"

# Linux/BSD only: the SCTK Wayland backend (see src/wayland.rs) plus arboard's
# wl-data-control clipboard backend. These crates don't build on macOS/Windows,
# where winit's native windowing and arboard's native clipboard take over.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

# macOS/Windows: arboard with its native (Cocoa / Win32) clipboard backend.
# default-features = false drops the unused `image-data` feature (and the heavy
# `image` crate it pulls in) — we only use the text clipboard.
[target.'cfg(any(target_os = "macos", windows))'.dependencies]
arboard = { version = "3", default-features = false }

[dev-dependencies]
insta = "1"
